recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:2: error: not found: value n
  if(n==0){
     ^