recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if(n==0){
    return
  }
  current(steps)
  avance(length)
  droite(angle)
  tree(steps-1,length*shrink,angle,shrink)
  gauche(angle)
  gauche(angle)
  tree(steps-1,length*shrink,angle,shrink)
  recule(length)
}